<resources>
    <string name="app_name">AndroidLesson06</string>
    <string name="tv_main">Авторизация</string>
    <string name="btn_enter">Войти</string>
    <string name="cat">cat</string>

    <string name="et_hint_email">email</string>
    <string name="et_hint_password">password</string>

    <string name="iv_res">result</string>

    <string name="lesson10">Lesson 10</string>
</resources>
